--- a/.github/workflows/release_prod.yaml
+++ b/.github/workflows/release_prod.yaml
@@ -79,6 +79,23 @@ jobs:
             --options runtime --timestamp \
             ./cli/target/${{ matrix.target }}/release/${{ matrix.artifact_name }}
 
+      - name: Code sign Windows binary
+        if: matrix.os == 'windows-latest'
+        shell: pwsh
+        env:
+          PFX_BASE64: ${{ secrets.CODE_SIGNING_CERT }}
+          PFX_PASSWORD: ${{ secrets.CODE_SIGNING_CERT_PWD }}
+        run: |
+          $pfxPath = Join-Path -Path $env:RUNNER_TEMP -ChildPath "certificate.pfx"
+          [IO.File]::WriteAllBytes($pfxPath, [Convert]::FromBase64String($env:PFX_BASE64))
+          
+          $signtool = Get-ChildItem -Path "C:\Program Files (x86)\Windows Kits\10\bin" -Filter "signtool.exe" -Recurse | Where-Object { $_.FullName -like "*x64*" } | Sort-Object FullName -Descending | Select-Object -First 1
+          if (-not $signtool) { throw "signtool.exe not found" }
+          
+          & $signtool.FullName sign /f $pfxPath /p $env:PFX_PASSWORD /tr http://timestamp.digicert.com /td sha256 /fd sha256 "./cli/target/${{ matrix.target }}/release/${{ matrix.artifact_name }}"
+          
+          Remove-Item $pfxPath
+
       - name: Rename artifact
         shell: bash
         run: |
