--- a/.github/workflows/release_prod.yaml
+++ b/.github/workflows/release_prod.yaml
@@ -145,7 +145,17 @@ jobs:
 
       - name: Update version in package.json
         working-directory: ./vscode-extension
-        run: npm version ${{ steps.read_version.outputs.version }} --no-git-tag-version
+        shell: bash
+        run: |
+          current=$(node -p "require('./package.json').version")
+          target="${{ steps.read_version.outputs.version }}"
+          echo "Current version: $current"
+          echo "Target version:  $target"
+          if [ "$current" != "$target" ]; then
+            npm version "$target" --no-git-tag-version
+          else
+            echo "package.json already at $target; skipping npm version"
+          fi
 
       - name: Compile TypeScript
         working-directory: ./vscode-extension
