--- a/tests/uat/auth/.env.example
+++ b/tests/uat/auth/.env.example
@@ -11,6 +11,7 @@ OAUTH_SCOPE="profile email"
 # OAuth2 Authorization Code
 ENV__OAUTH_AC_DEFAULT_ENV__OAUTH_CLIENT_ID=rq-uat-ac
 ENV__OAUTH_AC_CUSTOM_ENV__OAUTH_CLIENT_ID=rq-uat-ac
+ENV__OAUTH_AC_EXTERNAL_ENV__OAUTH_CLIENT_ID=rq-uat-ac
 
 # OAuth2 Implicit
 ENV__OAUTH_IMPLICIT_DEFAULT_ENV__OAUTH_CLIENT_ID=rq-uat-implicit
